# xcc

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  HARNESS.md  LESSONS.md  README.md  TODO.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile.glibc  Dockerfile.musl
docs/: apple_silicon.md  architecture.md  backend.md  build.md  cpython.md  documentation.md  frontend.md  frontend_c11_coverage.md  index.md  licensing.md  linux_elf.md  performance.md  quality.md  references.md  requirements.md  roadmap.md  testing.md
scripts/: agent_worktree.py  clang_frontier.py  cpython_file_trial.py  cpython_trial.py  docker-build.sh  docker-clang-suite.sh  docker-run.sh  docker-shell.sh  harness_queue.py  harness_supervisor.py  openclaw_cron_smoke.sh  sync_clang_fixtures.py  tox-docker-exec.sh  xcc_blocker_crusher.py
src/xcc/: __init__.py  __main__.py  ast.py  cc_driver.py  clang_suite.py  codegen.py  cpython_harness.py  diag.py  frontend.py  host_includes.py  lexer.py  openclaw_cron.py  options.py  parser.py  preprocessor.py  sema.py  types.py
src/xcc/include/: stddef.h
src/xcc/parser/: __init__.py  array_sizes.py  declarators.py  diagnostics.py  expressions.py  extensions.py  model.py  statements.py  type_diagnostics.py  type_specs.py
src/xcc/preprocessor/: __init__.py  common.py  conditionals.py  expressions.py  includes.py  macro_expansion.py  macros.py  pragmas.py  probes.py  process.py  text.py
src/xcc/sema/: __init__.py  calls.py  constants.py  conversions.py  declarations.py  expressions.py  format_checking.py  initializers.py  layout.py  records.py  statements.py  symbols.py  type_helpers.py  type_resolution.py
tests/: test_agent_worktree.py  test_cc_driver.py  test_cc_driver_helpers.py  test_clang_frontier.py  test_clang_suite.py  test_clang_suite_helpers.py  test_cli.py  test_codegen.py  test_cpython_harness.py  test_frontend.py  test_harness_queue.py  test_harness_supervisor.py  test_host_includes.py  test_lexer.py  test_native_backend.py  test_openclaw_cron.py  test_options.py  test_parser.py  test_preprocessor.py  test_sema.py
