[project]
name = "xcc"
version = "0.2.0a1"
description = "Python C11 compiler with deterministic diagnostics and zero runtime dependencies."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
license = "Apache-2.0"
license-files = ["LICENSE"]

[project.scripts]
xcc = "xcc:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.13.3",
    "mkdocs>=1.6.1",
    "ruff>=0.15.0",
    "tox>=4.34.1",

    "tox-uv>=1.29.0",
    "ty>=0.0.15",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]
extend-exclude = ["docs/_sources", "site"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
include = ["src"]
exclude = [
    ".tox/**",
    ".venv/**",
    "build/**",
    "dist/**",
    "docs/_sources/**",
    "site/**",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.tox]
requires = ["tox>=4.34.1", "tox-uv>=1.29.0"]
env_list = ["py311", "py312", "py313", "py313t", "py314", "py314t", "pypy311", "clang_suite", "native_smoke", "lint", "type"]
skip_missing_interpreters = true

[tool.tox.env_run_base]
commands = [["coverage", "run", "-m", "unittest", "discover", "-v"], ["coverage", "report", "--fail-under=100"]]

[tool.tox.env.lint]
runner = "uv-venv-lock-runner"
dependency_groups = ["dev"]
package = "skip"
commands = [["ruff", "check", "src"], ["ruff", "format", "--check", "src"]]

[tool.tox.env.type]
runner = "uv-venv-lock-runner"
dependency_groups = ["dev"]
package = "skip"
commands = [["ty", "check", "src"]]

[tool.tox.env.clang_suite]
package = "skip"
set_env = { XCC_RUN_CLANG_SUITE = "1" }
commands = [["python", "-m", "unittest", "-v", "tests.test_clang_suite"]]

[tool.tox.env.native_smoke]
package = "skip"
commands = [["python", "-m", "unittest", "-v", "tests.test_native_backend"]]

[tool.tox.env.docker_clang_suite]
allowlist_externals = ["bash"]
commands = [["bash", "scripts/docker-clang-suite.sh"]]
